--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@mui/material-nextjs": "^6.3.1",
+    "@types/react-color": "^3.0.13",
+    "draft-js": "^0.11.7",
     "firebase": "^11.2.0",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/draft-js": "^0.11.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
