--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^6.4.1",
     "@mui/material-nextjs": "^6.3.1",
     "@types/react-color": "^3.0.13",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^11.2.0",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/draft-js": "^0.11.18",
+    "@types/draftjs-to-html": "^0.8.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
