--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "draftjs-to-html": "^0.9.1",
     "firebase": "^11.2.0",
     "next": "15.1.6",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0"
+    "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
