--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material-nextjs": "^6.3.1",
     "@types/react-color": "^3.0.13",
     "@types/react-draft-wysiwyg": "^1.13.8",
+    "axios": "^1.7.9",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "firebase": "^11.2.0",
